package comm;

message ReqAgentLogin
{
	optional int32 aid = 1;		// 座席编号
}

message ResAgentLogin
{
	optional int32 aid = 1;		// 座席编号
}

message ReqAgentLogout
{
	required int32 aid = 1;		// 座席编号
}

message ResAgentLogout
{
	
}

message ReqAgentRequest
{
	required int32 aid = 1;		// 座席编号
}

message ResAgentRequest
{
	optional int32 aid = 2;		// 座席编号
}

message ReqAgentChat
{
	required int32 aid = 1;		// 座席编号
	required int32 ato = 2;		// 聊天对象
	required string word = 3;	// 聊天内容
}

message ResAgentChat
{

}
